src/styles/Mixins.sass
@mixin badge($background: var(--color-highlight), $size: 0.75rem) 
  padding: 2px 4px !important
  border-radius: var(--border-radius)
  background: $background
  color: #fff
  font-size: $size


@mixin inset 
  padding: 0.5rem
  border: 1px solid #ccc
  border-radius: 0.4rem
  box-shadow: 0 0 5px rgba(165,42,42,0.3) inset

@mixin cornice
  svg
    width: var(--size)
    height: var(--size)
    stroke: currentColor
    fill: none
    transform: rotate(var(--rotation))
    transform-origin: center
  path
    stroke-width: var(--stroke-width)

  circle
    fill: currentColor

@mixin flex-row 
  display: flex
  flex-direction: row


@mixin flex-column 
  display: flex
  flex-direction: column


@mixin flex-group-center 
  align-items: center
  justify-content: center
  text-align: center


@mixin flex-group-left 
  align-items: center
  justify-content: flex-start
  text-align: left


@mixin flex-group-right 
  align-items: center
  justify-content: flex-end
  text-align: right


@mixin flex-group-top 
  align-items: center
  justify-content: flex-start
  text-align: center


@mixin flex-group-top-right 
  align-items: flex-end
  justify-content: flex-start
  text-align: right


@mixin flex-group-top-left 
  align-items: flex-start
  justify-content: flex-start
  text-align: left


@mixin flex-space-between 
  align-items: center
  justify-content: space-between
  text-align: center


@mixin flex-space-evenly 
  align-items: center
  justify-content: space-evenly
  text-align: center


@mixin border 
  border-style: var(--border-style)
  border-width: var(--border-width)
  border-color: var(--player-color)


@mixin border-top 
  border-top: var(--border-style)
  border-width: var(--border-width)
  border-color: var(--border-color)


@mixin border-top-bottom 
  border-top: var(--border-style)
  border-bottom: var(--border-style)
  border-width: var(--border-width)
  border-color: var(--border-color)


@mixin border-bottom 
  border-bottom: var(--border-style)
  border-width: var(--border-width)
  border-color: var(--border-color)


@mixin panel-1 
  background: var(--panel-1-background)
  color: var(--panel-1-color)
  --border-color: var(--panel-1-color)


@mixin pulse($color: #fff, $duration: 1.2s) 
  animation: pulse $duration infinite ease-out
  color: $color
  text-shadow: lightblue 0 0 4px

  @keyframes pulse 

    0% 
      opacity: 1
    

    25% 
      opacity: 0.5
    

    100% 
      opacity: 1
    
  


@mixin buttons
  .rowimg
    position: absolute
    top: calc(50% - 15.5px)
    left: -2px
    width: 30px
    height: 30px
    padding: 0
    object-fit: cover

    img
      width: 30px
      height: 30px

    &.button
      cursor: pointer
      border: 1px solid grey
      border-radius: 3px
      background-color: rgba(0, 0, 0, 0.1)

  &button
    position: absolute
    top: -1px
    left: 0
    width: 30px
    height: 30px
    padding: 0
    object-fit: cover
    border: 1px solid grey
    border-radius: 3px
    background-color: rgba(0, 0, 0, 0.1)
    cursor: pointer

    img
      width: 30px
      height: 30px

  .rowbutton
    display: inline-block
    padding: 3px 5px
    border: 1px solid grey
    border-radius: 3px
    background-color: rgba(0, 0, 0, 0.1)
    cursor: pointer

    i
      padding: 0
      margin: 0

  .rowimgbezelbutton
    border-style: solid
    border-width: 1px
    text-shadow: 0 1px 0 #eee
    background: #ccc
    color: #333
    font-family: "Lucida Grande"
    font-size: 12px
    font-weight: bold
    cursor: pointer
    text-decoration: none
    -webkit-border-radius: 3px
    -webkit-box-shadow: inset 0 1px 1px #fff, inset 0 -1px 1px #aaa, 0 2px 4px -3px #666

    &.lock-open
      background-color: #19762d
      color: white

    &.lock
      background-color: #9c0f0f
      color: white

    img
      margin: 2px 5px 0 5px
      border: none

    &.disabled
      cursor: not-allowed
      background-color: rgba(170, 170, 170, 0.5)
      border: 1px outset transparent
      color: #989898

      img
        &.buttonicon
          // filter: invert(.5) sepia(1) saturate(5) hue-rotate(17deg) // example
          filter: invert(.6)

  &:active
    -webkit-box-shadow: inset 0 1px 1px #aaa, inset 0 -1px 1px #aaa
    border-color: #888 #aaa #eee

  .embossButton
    border: 1px solid transparent
    border-radius: 3px
    background-color: rgba(255, 255, 255, 0.5)
    cursor: pointer


@mixin button 
  & 
    box-sizing: border-box
    display: flex
    flex-direction: row
    align-items: center
    justify-content: center
    text-align: center
    border-style: var(--button-border-style)
    border-radius: var(--button-border-radius)
    border-width: var(--button-border-width)
    border-color: var(--button-border-color)
    background: var(--button-background)
    font-size: var(--button-font-size)
    font-weight: var(--button-font-weight)
    padding: var(--button-padding)
    color: var(--button-color)
    line-height: var(--button-line-height)
    margin: 0
    background-color: transparent
    
  &:disabled 
    cursor: default
    background: var(--button-background-disabled)

  &:hover 
    &:not(:disabled) 
      background: radial-gradient(var(--sheet-color), transparent)
    
  
  
@mixin white-shadow-header($font-size: var(--size-md-h))
  .header
    position: relative
    font-size: $font-size
    color: #fff
    text-shadow: 0 3px 3px #000


@mixin white-shadow-underscore($height: 2px, $color: #fff, $shadow-color: #000, $shadow-depth: 3px, $bottom: -0.1em, $left: 0, $width: 100%, $border-width: 0px)
  .underscore
    &:after
      content: ''
      position: absolute
      left: $left
      border: $border-width solid transparent 
      border-radius: 4px
      bottom: $bottom 
      width: $width
      height: $height 
      background-color: $color 
      box-shadow: 0 $shadow-depth $shadow-depth $shadow-color 

  &
    position: relative 

